--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 :root {
     --background-color: hsl(30, 54%, 90%);
     --card-color: hsl(0, 0%, 100%);
-    --footer-color: hsl(228, 45%, 44%);
+    --footer-color: hsl(14, 45%, 36%);
     --h1-color: hsl(24, 5%, 18%);
     --p-color: hsl(30, 10%, 34%); 
     --prep-bg-color: hsl(330, 100%, 98%);
     --prep-h3-color: hsl(332, 51%, 32%);
     --h2-color: hsl(14, 45%, 36%);
+    --hr-color:hsl(30, 18%, 87%);
 }
 
 * {
@@ -26,7 +27,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    max-height: 100vh;
     max-width: 25rem;
 
     background-color: var(--card-color);
@@ -57,25 +58,62 @@ h1{
     border-radius: .625rem;
     box-sizing: border-box;
     width: 100%;
-    padding: 1.25rem;
-    margin-top: 1rem;
+    padding: 1rem;
+    margin: 1rem;
 }
 
 .preperation h3 {
     color: var(--prep-h3-color);
-    font-size: 1rem;
+    font-size: .75rem;
     margin-bottom: .625rem;
+}
+
+.preperation ul, .ingredients ul, .instructions ol {
+    padding-left: 1.25rem;
 }
 
 h2 {
     color: var(--h2-color);
-    font-size: 1.25rem;
-    margin-top: 1.25rem;
+    font-size: 1.1rem;
     margin-bottom: .625rem;
 }
 
+.ingredients, .instructions, .nutrition {
+    width: 100%;
+}
+
+.ingredients li {
+    margin-bottom: .625rem;
+}
+
+hr {
+    width: 100%;
+    border: .05rem solid var(--hr-color);
+    margin: .5rem;
+}
+
+.instructions li {
+    margin-bottom: .625rem;
+}
+
+table, th, td {
+    width: 100%;
+    border-bottom: .05rem solid var(--hr-color);
+    border-collapse: collapse;
+    padding: .625rem 0;
+}
+
+th{
+    text-align: left;
+}
+
+td {
+    color: var(--h2-color);
+    font-weight: 700;
+}
+
 footer { 
-    font-size: 11px; 
+    font-size: .75rem; 
     text-align: center; 
 }
 
