--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img, picture, video{
 body {
     background-color: var(--background-color);
     font-family: 'young-serif', serif;
-    font-size: .625rem;
+    font-size: 1rem;
     color: var(--p-color);
 }
 
@@ -33,11 +33,11 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 25rem;
+    max-width: 33rem;
 
     background-color: var(--card-color);
     border-radius: .625rem;
-    padding: 1.25rem;
+    padding: 1.5rem;
     margin: 3rem auto;
 }
 
@@ -47,7 +47,7 @@ header img {
 
 h1{
     color: var(--h1-color);
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 700;
 
     padding: 1rem 0 .625rem;
@@ -58,12 +58,12 @@ h1{
     border-radius: .625rem;
     width: 100%;
     padding: 1rem;
-    margin: 1rem;
+    margin-top: 1rem;
 }
 
 .preperation h3 {
     color: var(--prep-h3-color);
-    font-size: .75rem;
+    font-size: 1.2rem;
     margin-bottom: .625rem;
 }
 
@@ -73,12 +73,13 @@ h1{
 
 h2 {
     color: var(--h2-color);
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     margin-bottom: .625rem;
 }
 
 .ingredients, .instructions, .nutrition {
     width: 100%;
+    margin: 1rem 0;
 }
 
 .ingredients li {
